--- a/js dom/index.html
+++ b/js dom/index.html
@@ -19,6 +19,9 @@
       font-family: sans-serif;
       color: #333;
     }
+    .biru-muda{
+      background-color: lightskyblue;
+    }
     /* #b p{
       color: red;
     }
