--- a/dom manipulation/index.html
+++ b/dom manipulation/index.html
@@ -31,7 +31,7 @@
         <p class="judul">JUDUL</p>
       </section>
 
-      <section id="input">
+      <form id="input">
         <div class="row judul">
           <div class="col-8">
             <input
@@ -44,7 +44,7 @@
             <button class="btn btn-primary" type="submit">Submit</button>
           </div>
         </div>
-      </section>
+      </form>
 
       <section id="list"></section>
       <section id="hide"></section>
