--- a/js dom/index.html
+++ b/js dom/index.html
@@ -28,6 +28,9 @@
     li:nth-child(2){
       background-color: lightcoral;
     } */
+    .p:active{
+      background-color: lightseagreen;
+    }
   </style>
 </head>
 <body>
@@ -37,7 +40,7 @@
       <p class="p1">paragraf 1</p>
       <a href="https://google.com">google</a>
       <p class="p2">paragraf 2</p>
-      <p class="p3">paragraf 3</p>
+      <p class="p3" onclick="ubahWarnaP3()">paragraf 3</p>
     </section>
     <section id="b">
       <p>paragraf 4
