--- a/dom manipulation/index.html
+++ b/dom manipulation/index.html
@@ -41,7 +41,9 @@
             />
           </div>
           <div class="col-auto">
-            <button class="btn btn-primary" type="submit">Submit</button>
+            <button class="btn btn-primary" type="submit" onclick="klik()">
+              Submit
+            </button>
           </div>
         </div>
       </form>
